--- a/package.json
+++ b/package.json
@@ -3,13 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server/index.js",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server/index.js",
+    "go": "npm run build && npm run start",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
-    "next": "10.0.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "axios": "^0.21.0",
+    "babel-plugin-styled-components": "^1.5.1",
+    "koa": "^2.5.1",
+    "koa-router": "^7.4.0",
+    "next": "^6.0.3",
+    "next-offline": "^2.7.1",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-query": "^2.25.2",
+    "styled-components": "4.4.1"
   }
 }
