--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
   "dependencies": {
     "axios": "^0.21.0",
     "babel-plugin-styled-components": "^1.5.1",
+    "dotenv": "^8.2.0",
+    "http-status-codes": "^2.1.4",
     "koa": "^2.5.1",
+    "koa-body": "^4.2.0",
     "koa-router": "^7.4.0",
+    "lodash": "^4.17.20",
+    "mongoose": "^5.10.11",
     "next": "^6.0.3",
     "next-offline": "^2.7.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-icons": "^3.11.0",
     "react-query": "^2.25.2",
+    "shortid": "^2.2.16",
     "styled-components": "4.4.1"
   }
 }
