--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "koa-router": "^7.4.0",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.11",
-    "next": "^6.0.3",
+    "next": "9.3.3",
     "next-offline": "^2.7.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-icons": "^3.11.0",
     "react-query": "^2.25.2",
+    "react-query-devtools": "^2.6.0",
     "shortid": "^2.2.16",
     "styled-components": "4.4.1"
   }
