--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "@koa/cors": "^3.1.0",
     "axios": "^0.21.0",
     "babel-plugin-styled-components": "^1.5.1",
     "dotenv": "^8.2.0",
@@ -20,7 +21,7 @@
     "lodash": "^4.17.20",
     "mongoose": "^5.10.11",
     "next": "9.3.3",
-    "next-offline": "^2.7.1",
+    "next-pwa": "^3.1.5",
     "react": "^16.13.0",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.0",
